--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -33,6 +33,20 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+		<!-- Feed Autodiscovery -->
+		<link
+			rel="alternate"
+			type="application/rss+xml"
+			title="DentalReach Magazine RSS"
+			href="/rss.xml"
+		/>
+		<link
+			rel="alternate"
+			type="application/xml"
+			title="DentalReach Articles Feed (JATS)"
+			href="/articles-feed.xml"
+		/>
+
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content={Astro.url} />
@@ -48,6 +62,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 		<meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 		<title>{title}</title>
+		<slot name="head" />
 	</head>
 	<body
 		class="flex flex-col min-h-screen bg-white text-neutral-900 font-body"
